--- a/assets/sass/abstracts/_mixins.scss
+++ b/assets/sass/abstracts/_mixins.scss
@@ -160,35 +160,35 @@
 @mixin montserrat-mv-2xl {
     font-family: $montserrat;
     font-weight: $font-regular;
-    font-size: $mv-xx-large;
+    font-size: $sm-xx-large;
 }
 
 @mixin montserrat-mv-xl {
     font-family: $montserrat;
     font-weight: $font-regular;
-    font-size: $mv-x-large;
+    font-size: $sm-x-large;
 }
 
 @mixin montserrat-mv-l {
     font-family: $montserrat;
     font-weight: $font-regular;
-    font-size: $mv-large;
+    font-size: $sm-large;
 }
 
 @mixin montserrat-mv-m {
     font-family: $montserrat;
     font-weight: $font-regular;
-    font-size: $mv-medium;
+    font-size: $sm-medium;
 }
 
 @mixin montserrat-mv-s {
     font-family: $montserrat;
     font-weight: $font-regular;
-    font-size: $mv-small;
+    font-size: $sm-small;
 }
 
 @mixin montserrat-mv-texto {
     font-family: $montserrat;
     font-weight: $font-regular;
-    font-size: $mv-texto;
+    font-size: $sm-texto;
 }
