--- a/assets/sass/abstracts/_variables.scss
+++ b/assets/sass/abstracts/_variables.scss
@@ -8,7 +8,7 @@ $color-primario: #000000;
 $color-terciario: #343a40;
 
 /*Tamaños de fuente*/
-$xx-large: 14.375rem;
+$xx-large: 14.757481940144478vh;
 $x-large: 11.875rem;
 $large: 9.375rem;
 $medium: 7.1875rem;
