--- a/assets/sass/layout/_gallery.scss
+++ b/assets/sass/layout/_gallery.scss
@@ -99,6 +99,7 @@
     .modal-dialog{
         margin-top: 10%;
         max-width: 80%;
+        pointer-events: auto;
     }
     
     .modal__imagen{
