--- a/assets/sass/components/_buttons.scss
+++ b/assets/sass/components/_buttons.scss
@@ -11,6 +11,7 @@
     color: white;
     line-height: 1;
     white-space: nowrap;
+    z-index: 9999 !important;
     
     & a{
         color: white;
