--- a/assets/sass/base/_typography.scss
+++ b/assets/sass/base/_typography.scss
@@ -9,6 +9,17 @@ html{
     &__texto{
         white-space: nowrap;
     }
+
+    &__titulo{
+        @include bebas-s;
+        color: black;
+    }
+
+    &__subtitulo-2{
+        @include bebas-texto;
+        color: black;
+    }
+
     &__texto-1{
         @include bebas-2xl;
         color: black;
@@ -43,6 +54,11 @@ html{
         @include bebas-s;
         color: black;
     }
+
+    &__subtitulo-2{
+        @include bebas-lg-texto;
+        color: black;
+    }
     &__parrafo-1{
         @include montserrat-mv-texto;
         line-height: 2rem;
@@ -56,6 +72,15 @@ html{
     font-weight: 400 !important;
 }
 
+.texto__fondo{
+    background: white;
+
+}
+
+.texto__fondo-dark{
+    background: black;
+    //padding: 0px 20px;
+}
 
 // Medium devices (tablets, 768px and up)
 @media (min-width: 768px) {
@@ -65,6 +90,15 @@ html{
         &__parrafo-1{
             @include montserrat-texto;
             line-height: 3rem;
+        }
+        &__titulo{
+            @include bebas-l;
+            color: black;
+        }
+    
+        &__subtitulo-2{
+            @include bebas-lg-texto;
+            color: black;
         }
     }
     
