--- a/assets/sass/layout/_trabajos.scss
+++ b/assets/sass/layout/_trabajos.scss
@@ -1,13 +1,18 @@
 main{
     background-color: white;
 }
+
+#trabajos{
+    margin-top: 200%;
+}
+
 .trabajos{
-    padding-top: 100px;
-    height: 100%;
     background-color: black;
 
     &__container{
+        padding-top: 20%;
         max-width: 100%;
+        margin-bottom: 20;
     }
 
     &__boton{
@@ -17,11 +22,10 @@ main{
     }
 }
 
+
 // Medium devices (tablets, 768px and up)
 @media (min-width: 768px) {
     .trabajos{
-        padding-top: 80px;
-        padding-bottom: 40px;
     
         &__boton{
             @include bebas-l;
@@ -30,11 +34,32 @@ main{
     }
 }
 
-// Large devices (desktops, less than 1200px)
-@media (min-width: 1199.98px) {
+// Large devices (desktops, 992px and up)
+@media (min-width: 992px) {
+    #trabajos{
+        margin-top: 80%;
+    }
+    
     .trabajos{
-        padding-top: 120px;
-        padding-bottom: 100px;
+        &__container{
+            padding-top: 10%;
+        }
+
+        &__boton{
+            @include bebas-l;
+            margin-bottom:  40px;
+        }
+    }
+}
+
+// Extra large devices (large desktops, 1200px and up)
+@media (min-width: 1200px) {
+    .trabajos{
+        &__container{
+            padding-top: 10%;
+        }
+       // padding-top: 300px;
+        //padding-bottom: 100px;
         &__boton{
             @include bebas-lg-l;
             margin-bottom:  40px;
